# Trade

./: .env.example  .gitignore  LAUNCH-CHECKLIST.md  Makefile  Procfile  README.md  config.py  pyproject.toml  render.yaml  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  cli.py  extensions.py  health.py
app/api/: webhooks.py
app/auth/: forms.py  password_reset_forms.py  routes.py
app/dashboard/: forms.py  invoice_forms.py  invoice_routes.py  routes.py
app/models/: __init__.py  _base.py  availability.py  booking.py  invoice.py  photo.py  service.py  stripe_event.py  tracking.py  trade.py
app/public/: forms.py  invoice_routes.py  routes.py  tracking_routes.py
app/services/: __init__.py  bookings.py  customers.py  email.py  errors.py  invoice_payments.py  invoice_pdf.py  invoices.py  magic_links.py  password_reset.py  payments.py  references.py  response_time.py  service_templates.py  slots.py  sms.py  storage.py  tracking.py
app/static/css/: app.css
app/templates/: _form.html  base.html
app/templates/auth/: forgot_password.html  login.html  reset_password.html  signup.html
app/templates/dashboard/: _base.html  _booking_row.html  availability.html  booking_detail.html  history.html  invoice_detail.html  invoice_new.html  invoices_index.html  profile.html  service_form.html  services.html  today.html  week.html
docs/: gdpr-and-privacy.md  prospect-one-pager.md  stripe-runbook.md
migrations/versions/: 941ced96e947_initial_schema.py
tests/: conftest.py  test_bookings.py  test_magic_links.py  test_payments.py  test_references.py  test_slots.py
(+26 files in other folders)
