[project]
name = "sorted"
version = "0.1.0"
description = "Sorted — a booking platform for Northern Ireland tradespeople"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.7",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.2",
    "python-dotenv>=1.0.1",
    "itsdangerous>=2.2.0",
    "wtforms>=3.1.2",
    "email-validator>=2.2.0",
    "bcrypt>=4.2.0",
    "stripe>=10.5.0",
    "twilio>=9.2.0",
    "gunicorn>=22.0.0",
    "python-slugify>=8.0.4",
    "sentry-sdk[flask]>=2.13.0",
    "pillow>=10.4.0",          # photo resize / thumbnails
    "boto3>=1.34.0",            # S3-compatible storage
    "reportlab>=4.2.2",         # invoice PDF generation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-flask>=1.3.0",
    "pytest-cov>=5.0.0",
    "freezegun>=1.5.1",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
